App_Deploy_Using_Argocd_Chai-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chai-app-service
spec:
  selector:
    app: chai-app
  ports:
  - port: 3000
    targetPort: 80
    protocol: TCP
  type: ClusterIP
